# spellbook

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  STATUS.md  a  codex.json  codex.toml  codex.toml.backup  continue.md  flake.nix  package.nix  problems.md  questions.md  refactor.md  sad  spellbook_output_1774044678.txt  spellbook_output_1774044918.txt  spellbook_output_1774046746.txt  symbols.md  testing.md  tests.todo  theme.toml  todo.md
docs/: architecture-diagram.md  architecture-diagrams-mermaid.md  architecture-refactor-archived.md  architecture.md  data-model.md  diagrams.md  keybindings.md  refactor-completion.md  roadmap-archived.md  roadmap.md  ui-screens.md
docs/issues/: spellbook-footer-gap.md
src/: app.rs  cli.rs  clipboard.rs  editor.rs  error.rs  executor.rs  lib.rs  logging.rs  main.rs  state.rs  test_utils.rs  validation.rs
src/archivist/: archivist.rs  mod.rs
src/data/: Spellbook.rs
src/invoker/: exec.rs  job_registry.rs  mod.rs  placeholder.rs
src/models/: Archivist.rs  Codex.rs  Spell.rs  Spellbook.rs  archivist.rs  codex.rs  job.rs  mod.rs  settings.rs  spell.rs  spellbook.rs  theme.rs
src/persistence/: archivist.rs  mod.rs
src/ui/: add_spell.rs  add_spell_form.rs  add_spellbook_form.rs  browse_spellbooks.rs  browse_spells.rs  confirm.rs  events.rs  feedback.rs  footer.rs  form.rs  handle_key.rs  help.rs  input.rs  jobs.rs  mod.rs  mode.rs  quick_add_spell.rs  render.rs  search_overlay.rs  search_state.rs  spell_list.rs  spellbook_browser.rs  spellbook_list.rs  streaming_modal.rs  uistate.rs
tests/: codex_tests.rs
