[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6"
ratatui = "0.30.0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"]}  
toml = "0.8"
